[package]
name = "validate-burst-log"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM hook plugin: PostToolUse gate that blocks structurally incomplete burst-log entries — validates h2 heading format, 9-block completeness (D-444(c)+D-446(a)), and Dim-1 cardinality parity (D-432(e)+D-448(d)(i)) (BC-5.39.004)"
publish = false

# Hook plugins ship as WASI commands (_start entry point) built via
# `cargo build --target wasm32-wasip1`. The [lib] target carries testable
# logic; [[bin]] wraps the entry point that calls into the lib.
[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "validate-burst-log"
path = "src/main.rs"

[dependencies]
vsdd-hook-sdk = { path = "../../hook-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
# NOTE: No `regex` crate — hand-rolled scanning is used to stay within the
# WASM fuel budget. The regex crate's DFA compilation exhausts the fuel
# cap on first call. See src/lib.rs for hand-rolled h2 and block scanning.

[dev-dependencies]
serde_json = { workspace = true }
vsdd-hook-sdk = { path = "../../hook-sdk" }

[lints]
workspace = true
