[package]
name = "validate-index-cite-refresh"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "WASM hook plugin: PostToolUse gate that blocks stale 4-index version citations in ARCH-INDEX.md and cross-cell mismatches in STATE.md/INDEX.md (BC-5.39.003, D-405(c), D-429(b))"
publish = false

# Hook plugins ship as WASI commands (_start entry point) built via
# `cargo build --target wasm32-wasip1`. The [lib] target carries testable
# logic; [[bin]] wraps the entry point that calls into the lib.
[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "validate-index-cite-refresh"
path = "src/main.rs"

[dependencies]
vsdd-hook-sdk = { path = "../../hook-sdk" }
serde = { workspace = true }
serde_json = { workspace = true }
# NOTE: No `regex` crate — hand-rolled scanning is used to stay within the
# WASM 10M fuel budget. The regex crate's DFA compilation exhausts the fuel
# cap on first call. See src/lib.rs extract_index_cites().

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
